<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/et"
            android:textSize="30dp"
            android:textAlignment="center"
            />



        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbCodigoEstado"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/etUf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            android:hint="@string/lbUfEstado"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"/>

        <EditText
            android:id="@+id/etDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbDescricaoEstado"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/etValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbValor"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"/>

        <Spinner
            android:id="@+id/spCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:hint="@string/btSalvar"
            android:background="@color/colorPrimary"
            android:textColorHint="#ffff"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:hint="@string/btCancelar"
            android:background="@color/colorPrimary"
            android:textColorHint="#ffff"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            />

    </LinearLayout>



</LinearLayout>